[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/menu/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="msg_text" type="Label" parent="."]
margin_left = 384.0
margin_top = 104.0
margin_right = 734.0
margin_bottom = 118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bt_comecar_cancelar_partida" type="Button" parent="."]
margin_left = 385.09
margin_top = 127.0
margin_right = 641.09
margin_bottom = 191.0
text = "Jogar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="id_text" type="Label" parent="."]
margin_left = 384.0
margin_top = 228.0
margin_right = 445.0
margin_bottom = 242.0
text = "Ip server:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="id_edit" type="TextEdit" parent="."]
margin_left = 448.0
margin_top = 224.0
margin_right = 640.0
margin_bottom = 245.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bt_entrar_partida" type="Button" parent="."]
margin_left = 384.0
margin_top = 256.0
margin_right = 640.0
margin_bottom = 320.0
text = "Entrar em uma partida"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bt_editar_cartas" type="Button" parent="."]
margin_left = 384.0
margin_top = 384.0
margin_right = 640.0
margin_bottom = 448.0
text = "Editar cartas"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="bt_comecar_cancelar_partida" to="." method="_on_bt_comecar_cancelar_partida_button_down"]
[connection signal="text_changed" from="id_edit" to="." method="_on_id_edit_text_changed"]
[connection signal="button_down" from="bt_entrar_partida" to="." method="_on_bt_entrar_partida_button_down"]
[connection signal="button_down" from="bt_editar_cartas" to="." method="_on_bt_editar_cartas_button_down"]
